// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can provide custom breakpoints: uses custom breakpoints 1`] = `
<div
  className="_bbx_0 _bbx_1 _bbx_2"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{width:50px}@media (min-width: 100px){._bbx_1{width:150px}}@media (min-width: 200px){._bbx_2{width:250px}}",
      }
    }
  />
</div>
`;

exports[`can provide custom spaces: handle unknowns space 1`] = `
<div
  className="_bbx_0 _bbx_1 _bbx_2"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{padding-right:10px}@media (min-width: 600px){._bbx_1{padding-right:20px}}@media (min-width: 900px){._bbx_2{padding-right:3px}}",
      }
    }
  />
</div>
`;

exports[`can provide custom spaces: looks up the custom space values 1`] = `
<div
  className="_bbx_0 _bbx_1 _bbx_2"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{padding-right:10px}@media (min-width: 600px){._bbx_1{padding-right:20px}}@media (min-width: 900px){._bbx_2{padding-right:30px}}",
      }
    }
  />
</div>
`;

exports[`can provide custom spaces: uses custom spaces 1`] = `
<div
  className="_bbx_0 _bbx_1 _bbx_2"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{margin-right:50}@media (min-width: 600px){._bbx_1{margin-right:150}}@media (min-width: 900px){._bbx_2{margin-right:250}}",
      }
    }
  />
</div>
`;

exports[`can specify element tag: container can render an article tag 1`] = `
<article
  className="_bbx_0"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{background:red}",
      }
    }
  />
</article>
`;

exports[`handle single values: null value 1`] = `
<div
  className="_bbx_0"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{}",
      }
    }
  />
</div>
`;

exports[`handle single values: single value 1`] = `
<div
  className="_bbx_0"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{flex-direction:row}",
      }
    }
  />
</div>
`;

exports[`skips breakpoints: skips empty 1`] = `
<div
  className="_bbx_0"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{}",
      }
    }
  />
</div>
`;

exports[`skips breakpoints: skips empty string 1`] = `
<div
  className="_bbx_0"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{}",
      }
    }
  />
</div>
`;

exports[`skips breakpoints: skips middle value 1`] = `
<div
  className="_bbx_0 _bbx_1"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{flex-direction:row}@media (min-width: 900px){._bbx_1{flex-direction:column}}",
      }
    }
  />
</div>
`;

exports[`skips breakpoints: skips multiple values 1`] = `
<div
  className="_bbx_0 _bbx_1"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{flex-direction:row}@media (min-width: 900px){._bbx_1{flex-direction:column}}",
      }
    }
  />
</div>
`;

exports[`skips breakpoints: skips null 1`] = `
<div
  className="_bbx_0"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{}",
      }
    }
  />
</div>
`;

exports[`skips breakpoints: skips undefined 1`] = `
<div
  className="_bbx_0"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "._bbx_0{}",
      }
    }
  />
</div>
`;
